# MatrixBallSorter

./: DisplayArray.py  README.md  SerialToGRBL.py  imagetest.py  pyproject.toml  readImage.py  server.py  website.html
ColorControl2/: ColorControl.ino  ColorControl2.ino
ColorControl2/ColorControl/: ColorControl.ino
Final Website/: Elecdes.html  Finale.html  Mechdes.html  Softdes.html  Team BIo.html  index.html  sprints.html
Final Website/assets/css/: main.css
Final Website/images/: layout.ai
Finale Website/: Mechdes.html
Finale Website/assets/js/: main.js
averageFuncTest/: averageFuncTest.ino
color_sensor_base/: color_sensor_base.ino
colorsensorcontroller/: colorsensorcontroller.ino
elevatorServo/: elevatorServo.ino
irSensorTest/: irSensorTest.ino
mvp1_sketch/: mvp1_sketch.ino
mvp2_sorter/: mvp2_sorter.ino
old/: MatrixGUI.py
serial_from_raspi/: serial_from_raspi.ino
servo_stepper_display/: servo_stepper_display.ino
servo_stepper_local_test/: servo_stepper_local_test.ino
stepper_only_test/: stepper_only_test.ino
website_files/: website.html
