[tool.poetry]
name = "matrixballsorter"
version = "0.1.0"
description = ""
authors = ["Declan Ketchum <dketchum@olin.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
